--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.2.3
 django-common-helpers==0.9.2
 django-cron==0.5.1
 django-crontab==0.7.1
+django-heroku==0.3.1
 docx==0.2.4
 gunicorn==20.1.0
 idna==2.10
@@ -14,6 +16,7 @@ lxml==4.6.3
 numpy==1.20.3
 pandas==1.2.4
 Pillow==8.2.0
+psycopg2==2.9.1
 python-dateutil==2.8.1
 python-docx==0.8.11
 pytz==2021.1
